--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -22,6 +22,7 @@
   border-radius: 100%;
   height: 50px;
   width: 50px;
+  object-fit: cover;
 }
 
 .bsl-thumb-profile-user {
@@ -58,6 +59,7 @@
 .bsl-header-img {
   width: 90%;
   height: 119px;
+  object-fit: scale-down;
 }
 
 .bsl-brand {
@@ -66,6 +68,10 @@
 
 .aside-menu {
   height: calc(100vh - 210px) !important;
+}
+
+.symbol.symbol-100 .symbol-label {
+  object-fit: cover !important;
 }
 
 @media (min-width: 992px) {
@@ -113,10 +119,15 @@
     box-shadow: none;
     border-top: none;
   }
-  .offcanvas.offcanvas-right.offcanvas-on {
+  .offcanvas.offcanvas-right.offcanvas-on,
+  .aside.aside-fixed {
     z-index: 1005;
   }
-  .offcanvas-overlay {
+  .offcanvas-overlay,
+  .aside-overlay {
+    z-index: 1002;
+  }
+  .header-mobile-fixed .header-mobile {
     z-index: 1001;
   }
 }
