Remoção de divisor e notificação de mensagens

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -67,6 +67,10 @@
   justify-content: flex-end;
 }
 
+.bsl-word-break {
+  word-break: break-word;
+}
+
 .aside-menu {
   height: calc(100vh - 210px) !important;
 }
