--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -107,7 +107,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 164px;
   padding: 10px;
 }
 
@@ -128,19 +128,19 @@
 .bsl-card-title {
   color: #fff;
   font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.5625rem;
   font-weight: 400;
   text-align: right;
 }
 
 .bsl-card-subtitle {
-  font-size: 0.875rem;
+  font-size: 1rem;
   text-align: right;
   font-family: "Poppins", sans-serif;
   display: block;
   line-height: 1.2;
   color: #fff;
-  padding-top: 20px;
+  padding-top: 2px;
 }
 
 .bsl-card-number {
@@ -150,7 +150,7 @@
   line-height: 1;
   font-weight: 500;
   text-align: right;
-  font-size: 3.75rem;
+  font-size: 5rem;
 }
 
 .bsl-card-primary {
