--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -177,6 +177,19 @@
   object-fit: cover !important;
 }
 
+.card.card-custom > .card-body.card-item {
+  height: 417px;
+}
+
+.card.card-custom > .card-body.card-map {
+  padding: 1rem;
+  height: 353px;
+}
+
+.card.card-custom > .card-body.card-map > div {
+  height: 100% !important;
+}
+
 @media (min-width: 992px) {
   .header-fixed.subheader-fixed .subheader {
     z-index: 9;
