Ajustes css, html e js

--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -302,7 +302,7 @@ th {
 
 #authors1 .btn.btn-light-primary br,
 #authors2 .btn.btn-light-primary br,
-#authors3 .btn.btn-light-primary br {
+#yearTable .btn.btn-light-primary br {
   display: none;
 }
 
