--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -200,7 +200,7 @@
 }
 
 .bsl-actions .btn.btn-sm {
-  width: 47%;
+  width: 75px;
   font-size: 0.9rem;
   padding-top: 0.47rem !important;
   padding-bottom: 0.47rem !important;
@@ -212,10 +212,28 @@
 
 .bsl-card-list-1 .bsl-description {
   min-height: 4.4rem;
+  text-align: justify;
 }
 
 .bsl-card-list-2 .bsl-description {
   min-height: 6.68rem;
+  text-align: justify;
+}
+
+.bsl-card-list-2 .bsl-list {
+  min-height: 5.4rem;
+}
+
+.bsl-symbol {
+  width: 100%;
+  height: 5.8rem;
+}
+
+.bsl-symbol img {
+  /*width: 100%;*/
+  max-width: 100%;
+  height: 80%;
+  margin: 0 auto;
 }
 
 .card.card-custom > .card-body.card-item {
