--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -200,7 +200,7 @@
 }
 
 .bsl-actions .btn.btn-sm {
-  width: 75px;
+  width: 48%;
   font-size: 0.9rem;
   padding-top: 0.47rem !important;
   padding-bottom: 0.47rem !important;
@@ -229,9 +229,21 @@
   height: 5.8rem;
 }
 
+.bsl-symbol-2 {
+  width: 100%;
+  height: 5rem;
+}
+
 .bsl-symbol img {
   /*width: 100%;*/
   max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.bsl-symbol-2 img {
+  /*width: 100%;*/
+  max-width: 7rem;
   height: auto;
   margin: 0 auto;
 }
