--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -231,7 +231,7 @@
 
 .bsl-symbol-2 {
   width: 100%;
-  height: 5rem;
+  height: 5.5rem;
 }
 
 .bsl-symbol img {
@@ -246,6 +246,18 @@
   max-width: 7rem;
   height: auto;
   margin: 0 auto;
+}
+
+.text-height {
+  height: 4rem;
+}
+
+.btn-bottom {
+  position: absolute;
+  bottom: 2rem;
+  left: 2.25rem;
+  width: 100%;
+  display: contents;
 }
 
 .card.card-custom > .card-body.card-item {
