--- a/src/static/css/bsl-style.css
+++ b/src/static/css/bsl-style.css
@@ -227,6 +227,9 @@
 .bsl-symbol {
   width: 100%;
   height: 5.8rem;
+  margin-bottom: 13px;
+  overflow: hidden;
+  position: relative;
 }
 
 .bsl-symbol-2 {
@@ -235,10 +238,11 @@
 }
 
 .bsl-symbol img {
-  /*width: 100%;*/
-  max-width: 100%;
-  height: auto;
+  display: block;
+  min-width: 100%;
+  max-height: 100%;
   margin: 0 auto;
+  object-fit: scale-down;
 }
 
 .bsl-symbol-2 img {
